--- a/_portfolio/Deep_Learning_Specialization/portfolio-1.ipynb
+++ b/_portfolio/Deep_Learning_Specialization/portfolio-1.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -589,11 +589,7 @@
     }
    ],
    "source": [
-    "y_pred = []\n",
-    "\n",
-    "for image in X_test:\n",
-    "    prediction_proba = model_DNN.predict(np.expand_dims(image, axis=0), verbose=0)\n",
-    "    y_pred.append(int(prediction_proba.squeeze().round()))\n",
+    "y_pred = model_DNN.predict(X_test, verbose=0).squeeze().round()\n",
     "\n",
     "print(classification_report(y_test, y_pred, digits=4))\n",
     "\n",
@@ -902,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -932,11 +928,7 @@
     }
    ],
    "source": [
-    "y_pred = []\n",
-    "\n",
-    "for image in X_test:\n",
-    "    prediction_proba = model_CNN.predict(np.expand_dims(image, axis=0), verbose=0)\n",
-    "    y_pred.append(int(prediction_proba.squeeze().round()))\n",
+    "y_pred = model_CNN.predict(X_test, verbose=0).squeeze().round()\n",
     "\n",
     "print(classification_report(y_test, y_pred, digits=4))\n",
     "\n",
