--- a/_portfolio/Deep_Learning_Specialization/portfolio-2.ipynb
+++ b/_portfolio/Deep_Learning_Specialization/portfolio-2.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
     "y_test = dataset_test[\"test_set_y\"][:]\n",
     "\n",
     "ds_train = tf.data.Dataset.from_tensor_slices((X_train, tf.one_hot(y_train, 6))).batch(32)\n",
-    "ds_validation = tf.data.Dataset.from_tensor_slices((X_test, tf.one_hot(y_test, 6))).batch(32)\n",
+    "ds_validation = tf.data.Dataset.from_tensor_slices((X_validation, tf.one_hot(y_validation, 6))).batch(32)\n",
     "classes = dataset_test[\"list_classes\"][:].astype(str)"
    ]
   },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -577,11 +577,7 @@
     }
    ],
    "source": [
-    "y_pred = []\n",
-    "\n",
-    "for image in X_test:\n",
-    "    prediction_proba = model_CNN.predict(np.expand_dims(image, axis=0), verbose=0)\n",
-    "    y_pred.append(np.argmax(prediction_proba.squeeze()))\n",
+    "y_pred = np.argmax(model_CNN.predict(X_test, verbose=0).squeeze(), axis=1)\n",
     "\n",
     "print(classification_report(y_test, y_pred, digits=4))\n",
     "\n",
@@ -833,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -867,11 +863,7 @@
     }
    ],
    "source": [
-    "y_pred = []\n",
-    "\n",
-    "for image in X_test:\n",
-    "    prediction_proba = model_ResNet.predict(np.expand_dims(image, axis=0), verbose=0)\n",
-    "    y_pred.append(np.argmax(prediction_proba.squeeze()))\n",
+    "y_pred = np.argmax(model_ResNet.predict(X_test, verbose=0).squeeze(), axis=1)\n",
     "\n",
     "print(classification_report(y_test, y_pred, digits=4))\n",
     "\n",
