--- a/_portfolio/Deep_Learning_Specialization/portfolio-3.ipynb
+++ b/_portfolio/Deep_Learning_Specialization/portfolio-3.ipynb
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -563,11 +563,7 @@
     }
    ],
    "source": [
-    "y_pred = []\n",
-    "\n",
-    "for image in X_test:\n",
-    "    prediction_proba = model.predict(np.expand_dims(image, axis=0), verbose=0)\n",
-    "    y_pred.append(int(prediction_proba.squeeze().round()))\n",
+    "y_pred = model.predict(X_test, verbose=0).squeeze().round()\n",
     "\n",
     "print(classification_report(y_test, y_pred, digits=4))\n",
     "\n",
@@ -579,7 +575,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "portfolio",
+   "display_name": "tensorflow",
    "language": "python",
    "name": "python3"
   },
@@ -593,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
